; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/orinoco/extr_orinoco_usb.c_ezusb_read_pda.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/orinoco/extr_orinoco_usb.c_ezusb_read_pda.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hermes = type { %struct.ezusb_priv* }
%struct.ezusb_priv = type { i32 }
%struct.request_context = type { i32 }

@EZUSB_RID_READ_PDA = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@EZUSB_FRAME_CONTROL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hermes*, i32*, i32, i32)* @ezusb_read_pda to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ezusb_read_pda(%struct.hermes* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.hermes*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.ezusb_priv*, align 8
  %11 = alloca %struct.request_context*, align 8
  %12 = alloca [2 x i32], align 4
  store %struct.hermes* %0, %struct.hermes** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %13 = load %struct.hermes*, %struct.hermes** %6, align 8
  %14 = getelementptr inbounds %struct.hermes, %struct.hermes* %13, i32 0, i32 0
  %15 = load %struct.ezusb_priv*, %struct.ezusb_priv** %14, align 8
  store %struct.ezusb_priv* %15, %struct.ezusb_priv** %10, align 8
  %16 = getelementptr inbounds [2 x i32], [2 x i32]* %12, i64 0, i64 0
  %17 = load i32, i32* %8, align 4
  %18 = and i32 %17, 65535
  %19 = call i32 @cpu_to_le16(i32 %18)
  store i32 %19, i32* %16, align 4
  %20 = getelementptr inbounds i32, i32* %16, i64 1
  %21 = load i32, i32* %9, align 4
  %22 = sub nsw i32 %21, 4
  %23 = call i32 @cpu_to_le16(i32 %22)
  store i32 %23, i32* %20, align 4
  %24 = load %struct.ezusb_priv*, %struct.ezusb_priv** %10, align 8
  %25 = load i32, i32* @EZUSB_RID_READ_PDA, align 4
  %26 = load i32, i32* @EZUSB_RID_READ_PDA, align 4
  %27 = call %struct.request_context* @ezusb_alloc_ctx(%struct.ezusb_priv* %24, i32 %25, i32 %26)
  store %struct.request_context* %27, %struct.request_context** %11, align 8
  %28 = load %struct.request_context*, %struct.request_context** %11, align 8
  %29 = icmp ne %struct.request_context* %28, null
  br i1 %29, label %33, label %30

30:                                               ; preds = %4
  %31 = load i32, i32* @ENOMEM, align 4
  %32 = sub nsw i32 0, %31
  store i32 %32, i32* %5, align 4
  br label %51

33:                                               ; preds = %4
  %34 = load i32, i32* %9, align 4
  %35 = sub nsw i32 %34, 2
  %36 = call i32 @cpu_to_le16(i32 %35)
  %37 = load i32*, i32** %7, align 8
  %38 = getelementptr inbounds i32, i32* %37, i64 0
  store i32 %36, i32* %38, align 4
  %39 = call i32 @cpu_to_le16(i32 2048)
  %40 = load i32*, i32** %7, align 8
  %41 = getelementptr inbounds i32, i32* %40, i64 1
  store i32 %39, i32* %41, align 4
  %42 = load %struct.ezusb_priv*, %struct.ezusb_priv** %10, align 8
  %43 = load %struct.request_context*, %struct.request_context** %11, align 8
  %44 = bitcast [2 x i32]* %12 to i32**
  %45 = load i32, i32* @EZUSB_FRAME_CONTROL, align 4
  %46 = load i32*, i32** %7, align 8
  %47 = getelementptr inbounds i32, i32* %46, i64 2
  %48 = load i32, i32* %9, align 4
  %49 = sub nsw i32 %48, 4
  %50 = call i32 @ezusb_access_ltv(%struct.ezusb_priv* %42, %struct.request_context* %43, i32 8, i32** %44, i32 %45, i32* %47, i32 %49, i32* null)
  store i32 %50, i32* %5, align 4
  br label %51

51:                                               ; preds = %33, %30
  %52 = load i32, i32* %5, align 4
  ret i32 %52
}

declare dso_local i32 @cpu_to_le16(i32) #1

declare dso_local %struct.request_context* @ezusb_alloc_ctx(%struct.ezusb_priv*, i32, i32) #1

declare dso_local i32 @ezusb_access_ltv(%struct.ezusb_priv*, %struct.request_context*, i32, i32**, i32, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
